# SoilStressCalculator

./: .gitignore  README.md  requirements.txt
FrontonExample/: Equipo.py  Jugador.py  README.md  app.py
Herencia/: Equipo.py  Jugador.py  README.md
SoilStressCalculator/: README.md  __init__.py  arista.py  calculator.py  main.py  poligono.py  pyproject.toml
SoilStressCalculator/reducers/: __init__.py  boussinesq_reducer.py  frolich_reducer.py
SoilStressCalculator/src/soil_vertical_stress_increment/: __init__.py  arista.py  calculator.py  main.py  poligono.py  punto.py
SoilStressCalculator/src/soil_vertical_stress_increment/models/: __init__.py  vertical_stress_increment_result.py
SoilStressCalculator/src/soil_vertical_stress_increment/reducers/: __init__.py  boussinesq_reducer.py  frolich_reducer.py  westergaard_reducer.py
SoilStressCalculator/tests/: soil_stress_calculator_test.py
SoilStressCalculatorGui/: README.md  config.py  main.py
SoilStressCalculatorGui/app/: main.py
SoilStressCalculatorGui/app/components/: CalculateParams.py  Punto3DFormWidgetData.py  charts_panel.py  coordinate_delegate.py  esfuerzos_chart.py  get_InputWithLabel.py  panel_resultados.py  punto_3d_form_widget.py  relacion_poisson_component.py  resultados_form.py  results_tabbar.py  rigidez_view.py  secciones_analisis_view.py  side_panel.py  superficie_punto_chart.py  vertices_view.py
SoilStressCalculatorGui/app/controllers/: __init__.py  calculate_controller.py  chart_controller.py  controller.py  export_controller.py
SoilStressCalculatorGui/components/: ssc_nav_bar.py
(+14 files in other folders)
